--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,310 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
+/* Reset y estilos generales */
+body {
+  font-family: 'Lato', sans-serif;
+  margin: 0;
   padding: 0;
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+/* Estilos de la tarjeta */
+.card {
+  display: flex;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 1px 10px rgba(1,1,1,0.4);
+  transition: all 0.3s ease;
+  text-decoration: none;
+  color: inherit;
+  justify-content: center;
+  max-width: 90%;
+  height: 130px;
+  margin: 0 auto;
+  flex: 1;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+}
+
+.card img {
+  width: 50%;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 15px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  font-weight: bold;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0 0 5px 0;
+  font-size: 1.4em;
+  text-align: left;
+}
+
+.card-price {
+  position: static;
+  font-weight: bold;
+  color: white;
+  background-color: #e74c3c;
+  padding: 5px 5px;
+  border-radius: 10px;
+  width: fit-content;
+  font-family: 'Times New Roman', Times, serif;
+  margin-top: auto;
+  margin-bottom: 0;
+  font-size: 1.4rem;
+  text-shadow: none;
+}
+
+.card-description {
+  font-size: 0.9em;
+  color: #7f8c8d;
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* Estilos del menú */
+.menu-container {
+  text-align: center;
+  padding: 10px;
+  background-color: #f9f9f9;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.menu-container h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  justify-content: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* Estilos de detalles del menú */
+.menu-detail {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-detail-image {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+
+.menu-detail-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  text-align: left;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.menu-detail-price {
+  font-size: 1.6rem;
+  font-weight: lighter;
+  color: #213fff44;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.menu-detail-description {
+  font-size: 1.4rem;
+  color: #7f8c8d;
+  text-align: left;
+  line-height: 1.6;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 0;
+}
+
+/* Estilos del panel de administración */
+.admin {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.admin h1, .admin h2 {
+  text-align: center;
+  color: #333;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-size: 2rem;
+}
+
+.admin ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.admin li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid #eee;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  max-height: 150px;
+}
+
+.admin li img {
+  width: 40%;
+  height: 120px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.product-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product-name {
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.product-price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #e74c3c;
+  margin-bottom: 10px;
+}
+
+.product-description {
+  font-size: 0.9rem;
+  color: #7f8c8d;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  max-height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-actions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.admin li button {
+  padding: 5px 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.admin li button:nth-child(1) {
+  background-color: #3b35dc;
+}
+
+.admin li button:nth-child(1):hover {
+  background-color: #0056b3;
+}
+
+.admin li button:nth-child(2) {
+  background-color: #c82333;
+}
+
+.admin li button:nth-child(2):hover {
+  background-color: #a71d2a;
+}
+
+.admin-edit {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.admin-edit-input, .admin-edit-file-input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  outline: none;
+}
+
+.admin-edit-button, .admin-add-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.admin-edit-button {
+  background-color: #3b35dc;
+}
+
+.admin-edit-button:hover {
+  background-color: #0056b3;
+}
+
+.admin-add {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.admin-add-button {
+  background-color: #15af41;
+}
+
+.admin-current-image {
+  height: 250px;
+  object-fit: cover;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.admin-change-image-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #d81717;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 10px;
 }
