--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@ body {
   height: 130px;
   margin: 0 auto;
   flex: 1;
+  margin-bottom: 20px; /* Asegura un espacio debajo de cada tarjeta */  
 }
 
 .card-link {
@@ -72,7 +73,7 @@ body {
   text-shadow: none;
   text-decoration: none; /* Asegura que no haya subrayado en estos elementos */
   color: inherit; /* Asegura que el color del texto sea el correcto */
-  color: #e74c3c; /* Color del precio */
+  color: #ffffff; /* Color del precio */
 }
 
 .card-description {
